--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/gridpak.css">				
   <link rel="stylesheet" href="css/styles.css">	
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon.png">
 </head>
 <body>
 	
-	<div class="container showgrid">
+	<div class="page">
+		
+			<nav class="row">
+				<ul class="span_7">
+					<li><a href="http://djackson13.github.io/p1-bio" id="homenav">Home</a></li>
+				  <li><a href="http://djackson13.github.io/p2-resume/" id="resumenav">Resume</a></li>
+				  <li><a href="http://derrickjackson.carbonmade.com/" target="_blank"id="portfolionav">Portfolio</a></li>
+				  <li><a href="https://derrickjackson.typeform.com/to/O4UPXD" target="_blank"id="contactnav">Contact</a></li>
+				</ul>						
+			</nav>
+		
 		
 		<!-- Your Content -->
-		<h1>Derrick Jackson's portfolio</h1>
+		
+
+
 
 		<!-- Clearfix -->
-		<div class="clear"></div>
-
+		
 	</div>
 	
   
