changed fonts and added more content

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script type="text/javascript" src="//use.typekit.net/fdz8ach.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <meta charset="UTF-8" />
   <title>p4-image gallery</title>
 	
@@ -65,6 +67,17 @@
 		</div>
 		<div class="lightbox-target" id="menu">
 		    <img src="img/nessst_01.jpg"/>
+		    <a class="lightbox-close" href="#"></a>
+	    </div>
+	    <div class="row">
+			<div class="col">
+				<a class="lightbox" href="#menu">
+				    <img src="img/thumb_04.jpg"/>
+				</a> 
+			</div> 
+		</div>
+		<div class="lightbox-target" id="menu">
+		    <img src="img/illustration.jpg"/>
 		    <a class="lightbox-close" href="#"></a>
 	    </div>
 			
