--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 	    </div>
 	    <div class="row">
 			<div class="col">
-				<a class="lightbox" href="#menu">
+				<a class="lightbox" href="#illustration">
 				    <img src="img/thumb_04.jpg"/>
 				</a> 
 			</div> 
 		</div>
-		<div class="lightbox-target" id="menu">
+		<div class="lightbox-target" id="illustration">
 		    <img src="img/illustration.jpg"/>
 		    <a class="lightbox-close" href="#"></a>
 	    </div>
